adk-payments/tests/ui/acp_experimental_requires_feature.rs
use adk_payments::protocol::acp::experimental::AcpExperimentalRouterBuilder;

fn main() {
    let _ = std::mem::size_of::<AcpExperimentalRouterBuilder>();
}
